--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     "composer/installers": "^1"
   },
   "require-dev": {
-    "phpunit/phpunit": "^5 || ^6 || ^7",
+    "phpunit/phpunit": "^5 | ^6 | ^7 | ^8 | ^9",
     "polevaultweb/phpunit-wp-cli-runner": "dev-master",
     "yoast/wp-test-utils": "^1.1"
   },
