--- a/composer.json
+++ b/composer.json
@@ -30,13 +30,13 @@
   },
   "scripts": {
     "test": [
-      "@php ./vendor/phpunit/phpunit/phpunit"
+      "@php ./vendor/phpunit/phpunit/phpunit --testdox"
     ],
 	"test-coverage": [
       "@php ./vendor/phpunit/phpunit/phpunit --coverage-text --coverage-html=coverage && echo coverage/index.html"
     ],
     "integration-test": [
-      "@php ./vendor/phpunit/phpunit/phpunit -c phpunit-integration.xml.dist"
+      "@php ./vendor/phpunit/phpunit/phpunit --testdox -c phpunit-integration.xml.dist"
     ]
   }
 }
