--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
 	"wp-cli/extension-command": "^2.0",
 	"wp-cli/entity-command": "^2.5",
 	"wp-cli/wp-cli-tests": "^3",
+	"wp-coding-standards/wpcs": "^2.3",
     "yoast/wp-test-utils": "^1.1"
   },
   "support": {
@@ -36,6 +37,7 @@
 	}
   },
   "scripts": {
+	"cs": "@php ./vendor/squizlabs/php_codesniffer/bin/phpcs",
     "test": [
       "@php ./vendor/phpunit/phpunit/phpunit --testdox"
     ],
