--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,9 @@
   },
   "require-dev": {
     "phpunit/phpunit": "^5 | ^6 | ^7 | ^8 | ^9",
-    "polevaultweb/phpunit-wp-cli-runner": "dev-master",
+	"wp-cli/extension-command": "^2.0",
+	"wp-cli/entity-command": "^2.5",
+	"wp-cli/wp-cli-tests": "^3",
     "yoast/wp-test-utils": "^1.1"
   },
   "support": {
@@ -28,6 +30,11 @@
       "includes/"
     ]
   },
+  "autoload-dev": {
+    "psr-4": {
+      "Automattic\\LegacyRedirector\\Tests\\": "tests/"
+	}
+  },
   "scripts": {
     "test": [
       "@php ./vendor/phpunit/phpunit/phpunit --testdox"
@@ -37,11 +44,15 @@
     ],
     "integration-test": [
       "@php ./vendor/phpunit/phpunit/phpunit --testdox -c phpunit-integration.xml.dist"
-    ]
+    ],
+	"behat": "run-behat-tests",
+	"behat-rerun": "rerun-behat-tests",
+	"prepare-tests": "install-package-tests"
   },
   "config": {
     "allow-plugins": {
-      "composer/installers": true
+      "composer/installers": true,
+      "dealerdirect/phpcodesniffer-composer-installer": true
     }
   }
 }
