CI: Add Behat tests
Instead of adding directly, the workflow is added to a central repository, and the reusable workflow is reference in the local workflow. The reusable workflow includes checks for key configuration files, and if they are missing, the main job in the workflow doesn’t run.

--- a/composer.json
+++ b/composer.json
@@ -49,7 +49,7 @@
     ],
 	"behat": "run-behat-tests",
 	"behat-rerun": "rerun-behat-tests",
-	"prepare-tests": "install-package-tests"
+	"prepare-behat-tests": "install-package-tests"
   },
   "config": {
     "allow-plugins": {
