--- a/composer.json
+++ b/composer.json
@@ -1,30 +1,30 @@
 {
   "name": "automattic/wpcom-legacy-redirector",
-  "type": "wordpress-plugin",
   "description": "WordPress plugin for handling large volumes of legacy redirects in a scalable manner.",
-  "homepage": "https://github.com/Automattic/WPCOM-Legacy-Redirector",
   "license": "GPL-2.0-or-later",
+  "type": "wordpress-plugin",
   "authors": [
     {
       "name": "Automattic",
       "homepage": "http://automattic.com/"
     }
   ],
-  "require": {
-    "php" : ">=5.6",
-    "composer/installers": "^1"
-  },
-  "require-dev": {
-    "phpunit/phpunit": "^5 | ^6 | ^7 | ^8 | ^9",
-	"wp-cli/extension-command": "^2.0",
-	"wp-cli/entity-command": "^2.5",
-	"wp-cli/wp-cli-tests": "^3",
-	"wp-coding-standards/wpcs": "^2.3",
-    "yoast/wp-test-utils": "^1.1"
-  },
+  "homepage": "https://github.com/Automattic/WPCOM-Legacy-Redirector",
   "support": {
     "issues": "https://github.com/Automattic/WPCOM-Legacy-Redirector/issues",
     "source": "https://github.com/Automattic/WPCOM-Legacy-Redirector"
+  },
+  "require": {
+    "php": ">=5.6",
+    "composer/installers": "^1"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^5 || ^6 || ^7 || ^8 || ^9",
+    "wp-cli/entity-command": "^2.5",
+    "wp-cli/extension-command": "^2.0",
+    "wp-cli/wp-cli-tests": "^3",
+    "wp-coding-standards/wpcs": "^2.3",
+    "yoast/wp-test-utils": "^1.1"
   },
   "autoload": {
     "classmap": [
@@ -34,27 +34,27 @@
   "autoload-dev": {
     "psr-4": {
       "Automattic\\LegacyRedirector\\Tests\\": "tests/"
-	}
-  },
-  "scripts": {
-	"cs": "@php ./vendor/squizlabs/php_codesniffer/bin/phpcs",
-    "test": [
-      "@php ./vendor/phpunit/phpunit/phpunit --testdox"
-    ],
-	"test-coverage": [
-      "@php ./vendor/phpunit/phpunit/phpunit --coverage-text --coverage-html=coverage && echo coverage/index.html"
-    ],
-    "integration-test": [
-      "@php ./vendor/phpunit/phpunit/phpunit --testdox -c phpunit-integration.xml.dist"
-    ],
-	"behat": "run-behat-tests",
-	"behat-rerun": "rerun-behat-tests",
-	"prepare-behat-tests": "install-package-tests"
+    }
   },
   "config": {
     "allow-plugins": {
       "composer/installers": true,
       "dealerdirect/phpcodesniffer-composer-installer": true
     }
+  },
+  "scripts": {
+    "behat": "run-behat-tests",
+    "behat-rerun": "rerun-behat-tests",
+    "cs": "@php ./vendor/squizlabs/php_codesniffer/bin/phpcs",
+    "integration-test": [
+      "@php ./vendor/phpunit/phpunit/phpunit --testdox -c phpunit-integration.xml.dist"
+    ],
+    "prepare-behat-tests": "install-package-tests",
+    "test": [
+      "@php ./vendor/phpunit/phpunit/phpunit --testdox"
+    ],
+    "test-coverage": [
+      "@php ./vendor/phpunit/phpunit/phpunit --coverage-text --coverage-html=coverage && echo coverage/index.html"
+    ]
   }
 }
