--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -2,34 +2,22 @@
 <phpunit
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/9.6/phpunit.xsd"
-		backupGlobals="false"
-		backupStaticAttributes="false"
-		beStrictAboutChangesToGlobalState="true"
-		beStrictAboutCoversAnnotation="true"
-		beStrictAboutOutputDuringTests="true"
-		bootstrap="tests/Unit/bootstrap.php"
-		colors="true"
-		convertErrorsToExceptions="true"
-		convertNoticesToExceptions="true"
-		convertWarningsToExceptions="true"
-		forceCoversAnnotation="true"
-		processIsolation="false"
-		stopOnError="false"
-		stopOnFailure="false"
-		stopOnIncomplete="false"
-		stopOnSkipped="false"
-		verbose="true"
-	>
+	beStrictAboutChangesToGlobalState="true"
+	beStrictAboutCoversAnnotation="true"
+	beStrictAboutOutputDuringTests="true"
+	bootstrap="tests/Unit/bootstrap.php"
+	colors="true"
+	forceCoversAnnotation="true"
+	verbose="true"
+>
+	<coverage processUncoveredFiles="true">
+		<include>
+			<directory suffix=".php">./includes</directory>
+		</include>
+	</coverage>
 	<testsuites>
 		<testsuite name="unit">
-			<directory suffix="Test.php">./tests/Unit/</directory>
+			<directory>./tests/Unit/</directory>
 		</testsuite>
 	</testsuites>
-
-	<filter>
-		<whitelist processUncoveredFilesFromWhitelist="true">
-			<directory suffix=".php">./includes</directory>
-		</whitelist>
-	</filter>
-
 </phpunit>
