--- a/.phpcs.xml.dist
+++ b/.phpcs.xml.dist
@@ -25,6 +25,9 @@
 	<!-- Enables parallel processing when available for faster results. -->
 	<arg name="parallel" value="8"/>
 
+	<!-- Rules: Check PHP version compatibility - see
+		https://github.com/PHPCompatibility/PHPCompatibilityWP -->
+	<rule ref="PHPCompatibilityWP"/>
 	<!-- For help in understanding this testVersion:
 		https://github.com/PHPCompatibility/PHPCompatibility#sniffing-your-code-for-compatibility-with-specific-php-versions -->
 	<config name="testVersion" value="7.4-"/>
